# agentic-phased-array-builder

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
examples/: 01_simple_patch_28ghz.py  02_coupling_aware_pattern.py  03_system_trade_study.py  04_agent_session.py  05_touchstone_import.py  06_full_pipeline_case_study.py  case_study_paper.tex
src/apab/: __init__.py  cli.py
src/apab/agent/: __init__.py  orchestrator.py  prompts.py  provider_registry.py  tool_dispatch.py
src/apab/commands/: design.py  init.py  mcp_serve.py  report.py  run.py
src/apab/compute/: __init__.py  base.py  local.py  registry.py
src/apab/core/: __init__.py  cache.py  config.py  provenance.py  schemas.py  workspace.py
src/apab/coupling/: __init__.py  active_impedance.py  polarization.py  sparams.py
src/apab/emtool/: __init__.py  base.py  importers.py  registry.py
src/apab/mcp/: __init__.py  resources.py  server.py  tools_array.py  tools_edgefem.py  tools_emtool.py  tools_io.py  tools_plot.py  tools_system.py
src/apab/pattern/: __init__.py  coupled_pattern.py  wrappers_pam.py
src/apab/providers/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py  openai_compat.py
src/apab/report/: __init__.py  build_report.py
src/apab/system/: wrappers_pas.py
tests/: conftest.py  test_cache.py  test_cli.py  test_compute_local.py  test_config.py  test_coupled_pattern.py  test_coupling_active.py  test_coupling_polarization.py  test_coupling_sparams.py  test_emtool_importers.py  test_mcp_server.py  test_mcp_tools_array.py  test_mcp_tools_edgefem.py  test_mcp_tools_system.py  test_orchestrator.py  test_pattern_pam.py  test_provenance.py  test_provider_registry.py  test_providers_ollama.py  test_report.py  test_schemas.py  test_system_pas.py  test_tool_dispatch.py  test_workspace.py
tests/integration/: __init__.py  test_e2e_agent_loop.py  test_e2e_touchstone_import.py  test_mcp_client.py
